--- a/grid.css
+++ b/grid.css
@@ -1,14 +1,7 @@
 .row {
   display: flex;
-  /* gap: 15px;
-  margin-bottom: 15px; */
+  gap: 30px;
 }
-
-/* .col {
-  background-color: gray;
-  height: 40px;
-} */
-
 .col-12 {
   width: 100%;
 }
