--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -19,6 +20,16 @@ body {
   }
   button:hover {
     cursor: pointer;
+  }
+  h2.subtitle {
+    color: white;
+    font-size: 32px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 55px;
+  }
+  h2.black {
+    color: black;
   }
 }
 
@@ -41,19 +52,31 @@ header {
     #4d0063
   );
   z-index: 5;
-  .header_wrapper {
-    padding-top: 30px;
-    width: 1170px;
-    height: 90px;
+  .header_container {
+    padding: 30px 0;
+    max-width: 1170px;
     margin: 0px auto;
-    nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
+    display: flex;
+    justify-content: space-between;
+    .logo {
       img.logo {
         transform: translateY(-8px);
       }
+    }
+    button {
+      background-color: transparent;
+      border: 2px solid #f7931a;
+      border-radius: 50px;
+      font-size: 17px;
+      line-height: 0;
+      height: 47px;
+      width: 150px;
+      letter-spacing: 1px;
+    }
+    button:hover {
+      background-color: #1b004e;
+    }
+    nav {
       ul {
         margin-left: -42px;
         list-style: none;
@@ -68,19 +91,6 @@ header {
             transition: all 0.3s ease-in-out;
           }
         }
-      }
-      button {
-        background-color: transparent;
-        border: 2px solid #f7931a;
-        border-radius: 50px;
-        font-size: 17px;
-        line-height: 0;
-        height: 47px;
-        width: 150px;
-        letter-spacing: 1px;
-      }
-      button:hover {
-        background-color: #1b004e;
       }
     }
   }
@@ -141,13 +151,8 @@ section.promo {
 }
 
 section.crypto_prices {
-  h2.subtitle {
-    color: white;
-    font-size: 32px;
-    font-weight: 600;
-    text-align: center;
-    margin: 87px 0 62px;
-  }
+  padding-top: 60px;
+  padding-bottom: 100px;
   table {
     color: white;
     width: 100%;
@@ -240,6 +245,22 @@ section.crypto_prices {
     img.info_icon {
       vertical-align: middle;
     }
+  }
+}
+
+section.platform {
+  background-color: #fff6fb;
+  padding-top: 68px;
+  min-height: 700px;
+  h3 {
+    color: black;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: "Inter", sans-serif;
+  }
+  p {
+    font-family: "Inter", sans-serif;
+    font-size: 17px;
   }
 }
 
