--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,6 @@
 }
 
 body {
-  width: 100vw;
   margin: 0;
   padding: 0;
   a {
@@ -59,6 +58,9 @@ header {
     margin: 0px auto;
     display: flex;
     justify-content: space-between;
+    .hamburger_menu {
+      display: none;
+    }
     .logo {
       img.logo {
         transform: translateY(-8px);
@@ -140,6 +142,9 @@ section.promo {
     font-weight: 300;
     font-size: 16px;
     margin-top: -36px;
+    span {
+      display: block;
+    }
   }
   button.white_listed {
     color: white;
@@ -205,24 +210,24 @@ section.crypto_prices {
       padding-left: 8%;
     }
     .volume {
-      width: 190px;
-      padding-left: 75px;
+      width: 16%;
+      padding-left: 6%;
     }
     .master {
-      width: 100px;
+      width: 12%;
     }
     .d7 {
-      width: 128px;
+      width: 11%;
     }
     .h24 {
-      width: 120px;
+      width: 8%;
     }
     .name {
-      width: 195px;
+      width: 15%;
     }
     .price {
-      width: 140px;
-      padding-left: 17px;
+      width: 14%;
+      padding-left: 2%;
     }
     .star {
       color: #828282;
@@ -270,6 +275,9 @@ section.platform {
 
 section.store {
   min-height: 700px;
+  .store_images_mob {
+    display: none;
+  }
   h2.subtitle {
     text-align: left;
     margin: 193px 0 0;
@@ -370,12 +378,14 @@ section.subscribe {
     justify-content: space-between;
     margin: 53px auto;
     border: 2px solid white;
-    width: 580px;
+    max-width: 580px;
+    min-width: 200px;
+    width: 40%;
     padding: 4px 4px 4px 20px;
     border-radius: 50px;
     input {
       font-size: 15px;
-      width: 230px;
+      width: 50%;
       outline: none;
       border: none;
       color: white;
@@ -444,7 +454,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1224px) {
   .container {
     padding: 0 25px;
   }
@@ -458,6 +468,276 @@ footer {
     }
     p.header_subtitle {
       margin-top: -11px;
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  header {
+    background: #1b004e;
+  }
+  nav {
+    display: none;
+  }
+  section.promo {
+    h1.header_title {
+      text-align: center;
+      font-size: 26px;
+      line-height: 2.8rem;
+      span {
+        display: block;
+      }
+    }
+    p.header_subtitle {
+      margin-top: 0;
+      font-size: 16px;
+      text-align: center;
+      line-height: 30px;
+      span {
+        display: inline;
+      }
+    }
+  }
+  header {
+    .header_container {
+      padding-top: 55px;
+      align-items: center;
+      .logo {
+        .logo_img {
+          transform: translateY(4px);
+        }
+      }
+      .hamburger_menu {
+        display: block;
+      }
+      #menu_toggle {
+        opacity: 0;
+        &:checked {
+          & ~ .menu_btn {
+            & > span {
+              transform: rotate(45deg);
+              &::before {
+                top: 0;
+                transform: rotate(0);
+              }
+              &::after {
+                top: 0;
+                transform: rotate(90deg);
+              }
+            }
+          }
+          & ~ .menu_box {
+            visibility: visible;
+            left: 0;
+          }
+        }
+      }
+      .menu_btn {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 67px;
+        right: 20px;
+        width: 26px;
+        height: 26px;
+        cursor: pointer;
+        z-index: 1;
+        & > span {
+          &::before {
+            content: "";
+            top: -8px;
+          }
+          &::after {
+            content: "";
+            top: 8px;
+          }
+        }
+      }
+      .menu_btn > span,
+      .menu_btn > span::before,
+      .menu_btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        border-radius: 4px;
+        background-color: #ffffff;
+        transition-duration: 0.25s;
+      }
+      .menu_box {
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        top: 0;
+        left: -100%;
+        width: 200px;
+        height: 100%;
+        margin: 0;
+        padding: 80px 0;
+        list-style: none;
+        background-color: #1b004e;
+        box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+        transition-duration: 0.25s;
+      }
+      .menu_item {
+        display: block;
+        padding: 12px 24px;
+        color: #ffffff;
+        font-family: "Roboto", sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        text-decoration: none;
+        transition-duration: 0.25s;
+        &:hover {
+          background-color: #eb5857;
+        }
+      }
+    }
+  }
+  .header_img_wrap {
+    display: none;
+  }
+  .promo_bg {
+    background-image: none;
+    min-height: 0;
+    .promo_btn {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
+  .promo_bottom_img {
+    display: none;
+  }
+  .trade {
+    display: none;
+  }
+
+  section.crypto_prices {
+    padding-top: 30px;
+    h2.subtitle {
+      font-size: 20px;
+    }
+    table {
+      border-top: none;
+      tr th {
+        display: none;
+      }
+      tr td {
+        display: none;
+      }
+      tr th:nth-child(2) {
+        display: block;
+      }
+      tr th:nth-child(7) {
+        display: table-cell;
+      }
+      tr td:nth-child(2) {
+        display: block;
+      }
+      tr td:nth-child(7) {
+        display: table-cell;
+      }
+    }
+  }
+  section.platform {
+    padding: 30px 0 30px;
+    .container {
+      display: flex;
+      flex-direction: column;
+    }
+    .platform_block {
+      text-align: center;
+      margin-top: 25px;
+    }
+    h2.black {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+  }
+  section.store {
+    min-height: 0;
+    padding-bottom: 50px;
+    h2.subtitle {
+      font-size: 20px;
+      text-align: center;
+      margin: 25px 0;
+    }
+    p {
+      font-size: 14px;
+      text-align: center;
+      width: 100%;
+    }
+    .store_images {
+      display: none;
+    }
+    .store_img_ph {
+      position: relative;
+      margin-top: 0;
+      text-align: center;
+      img {
+        position: relative;
+        width: 80%;
+        top: 20px;
+        left: 0;
+      }
+    }
+    .store_images_mob {
+      display: flex;
+      justify-content: center;
+      gap: 0;
+      margin-top: 50px;
+      a {
+        display: flex;
+        justify-content: center;
+      }
+      img {
+        width: 80%;
+      }
+    }
+  }
+  section.thrive {
+    h2.black {
+      font-size: 32px;
+      margin: 0;
+    }
+    .item_wrap {
+      margin-top: 50px;
+    }
+  }
+  section.subscribe {
+    padding: 40px 0 10px;
+    img {
+      display: none;
+    }
+    h2.subscribe {
+      font-size: 24px;
+    }
+    h3.subscribe {
+      padding-top: 20px;
+      font-size: 14px;
+    }
+    .btn_wrap {
+      width: 90%;
+      a {
+        padding: 13px 30px 13px 30px;
+      }
+    }
+  }
+  footer {
+    padding-bottom: 50px;
+    .links_wrap {
+      flex-direction: column;
+      div {
+        margin-top: 30px;
+      }
+    }
+    .footer_bottom {
+      text-align: center;
+      flex-direction: column-reverse;
+      .social {
+        justify-content: center;
+      }
     }
   }
 }
